--- a/fitlifehub1/index.html
+++ b/fitlifehub1/index.html
@@ -35,11 +35,11 @@
             <h3>Book Now</h3>
             <form id="Book"  action="master.php" method="get">
            <label for="UserName">UserName/Email-id:</label>
-           <input type="text" placeholder=" enter the name" id="UserName" name="UserName" required>
+           <input type="text" placeholder=" Enter The Name" id="UserName" name="UserName" required>
            <label for="password">Password:</label>
-           <input type="password" id="password" name="password" placeholder="enter password" required>
+           <input type="password" id="password" name="password" placeholder="Enter Password" required>
            <label for="Address" >Address:</label>
-           <input type="text" placeholder="enter Address"id="Address" name="Address"required>
+           <input type="text" placeholder="Enter Address"id="Address" name="Address"required>
            <label for="PhoneNo">Phone No.</label>
            <input type="number" id="PhoneNo" name="PhoneNo" placeholder="Enter Phone No." required>
            <button name="BookAppointment" id="BookAppointment" >Book Appointment</button>
@@ -50,10 +50,10 @@
    </section> 
    <section id="About">
    <div id="containerbox">
-    <div class="sub-box">Our Expertise<br><h5>Feel free to customize<br> the datails to match your <br>company's specific expertise <br>and services.</h5></div>
-    <div class="sub-box">Book an Appointment<br> <h5>Don't wait any longer<br> to get the services you need!</h5><button style="border-radius:15px ;background-color: rgb(46, 118, 46); color: white; text-align:center ; margin-left: 25px;">Book Now</button></div>
-    <div class="sub-box">Have an Emergency?<h5>If you're facing an urgent <br>situation,we're here to help.Our<br> dwdicated team is available <br>24/7 to respond to energencies<br> promptly and efficiently.</h5></div>
-    <div class="sub-box">Contact Details <br> <br><br><br>1800-0-900-6374<br><button style="border-radius: 8px; background-color: rgb(54, 126, 82); color: white; margin-left: 25px;">call us</button></div>
+    <div class="sub-box">Our Expertise<br><p style="font-size: 14px; margin-left: 10px;">Feel free to customize the datails to match your company's specific expertise and services.</p></div>
+    <div class="sub-box">Book an Appointment<br><p style="font-size: 14px; margin-left: 10px;"> Don't wait any longer to get the services you need!</p><button style="border-radius:15px ;background-color: rgb(46, 118, 46); color: white; text-align:center ; margin-left: 25px;">Book Now</button></div>
+    <div class="sub-box">Have an Emergency?<p style="font-size: 14px; margin-left: 10px;">If you're facing an urgent >situation,we're here to help.Our dwdicated team is available 24/7 to respond to energencies promptly and efficiently.</p></div>
+    <div class="sub-box">Contact Details <br> <br><br><br>Contact-no:1800-0-900-6374<br><button style="border-radius: 8px; background-color: rgb(54, 126, 82); color: white; margin-left: 25px;">call us</button></div>
    </div>
    </section>
    <section id="Health Tips">
@@ -179,12 +179,12 @@ Consume alcohol in moderation and avoid tobacco products to reduce health risks.
         <h1>Feedback Form</h1>
         <form id="feedbackForm" action="feedback.php" method="get">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="enter the name" required>
+            <input type="text" id="name" name="name" placeholder="Enter The Name" required>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" placeholder="Enter the email" required>
             <label for="comments">Comments:</label>
-            <textarea id="comments" name="comments" rows="4" placeholder="comments here" required></textarea>
+            <textarea id="comments" name="comments" rows="4" placeholder="Comments Here" required></textarea>
 
             <button type="submit">Submit Feedback</button>
         </form>
