--- a/fitlifehub12/index.html
+++ b/fitlifehub12/index.html
@@ -53,7 +53,7 @@
     <div class="sub-box">Our Expertise<br><p style="font-size: 14px; margin-left: 10px;">Feel free to customize the datails to match your company's specific expertise and services.</p></div>
     <div class="sub-box">Book an Appointment<br><p style="font-size: 14px; margin-left: 10px;"> Don't wait any longer to get the services you need!</p><button style="border-radius:15px ;background-color: rgb(46, 118, 46); color: white; text-align:center ; margin-left: 25px;">Book Now</button></div>
     <div class="sub-box">Have an Emergency?<p style="font-size: 14px; margin-left: 10px;">If you're facing an urgent >situation,we're here to help.Our dwdicated team is available 24/7 to respond to energencies promptly and efficiently.</p></div>
-    <div class="sub-box">Contact Details <br> <br><br><br>Contact-no:1800-0-900-6374<br><button style="border-radius: 8px; background-color: rgb(54, 126, 82); color: white; margin-left: 25px;">call us</button></div>
+    <div class="sub-box">Contact Details <br><br><h5 style="margin-left: 10px;">Contact-no:1800-0-900-6374<button style="border-radius: 8px; background-color: rgb(54, 126, 82); color: white; margin-left: 35px;">call us</button></h5></div>
    </div>
    </section>
    <section id="Health Tips">
